--- a/css/style2.css
+++ b/css/style2.css
@@ -12,16 +12,12 @@
 */
 html,
 body {
-  overflow-x: hidden!important;
-  /*font-family: 'Source Sans Pro', sans-serif;*/
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
-  -webkit-font-smoothing: antialiased;
-  min-height: 100%;
-  background: #f1f2f7;
+    height: 100%;
+    background: #f0f3f4;
 }
 
-.fa{margin-right:5px;}
 
+section{display:block;}
 
 a {
   color: white;
@@ -55,6 +51,268 @@ a:hover.btn-lightblue{background-color:#febe10;color:white;}
 
 
 /* Layouts */
+
+
+
+
+aside.left-content {
+    width: 230px;
+    margin-left: -250px;
+    border-left: 60px solid #004071;
+    min-height: 100%;
+    float: left;
+    background: #fff;
+    position: relative;
+    padding-bottom: 500em;
+    margin-bottom: -500em;
+}
+
+
+aside.left-content>* {
+    margin-left: -60px;
+}
+
+
+
+.logo{
+margin-left: -60px;
+}
+
+.logo>div.pear {
+    width: 60px;
+    background: #3f454f;
+    padding-top: 15px;
+
+}
+
+.logo>div{
+    height: 70px;
+    text-align: center;
+    vertical-align: middle;
+    display: inline-block;
+
+}
+
+body, html{
+    height: 100%;
+    background: #f0f3f4;
+}
+.main-content{
+    padding-left: 250px;
+    min-height: 100%;
+    overflow: hidden;
+
+}
+.main-content > aside{
+    /*float:left;*/
+}
+aside.right-content {
+    padding: 20px 20px 20px 0;
+    padding-bottom: 500em;
+    margin-bottom: -500em;
+    float:left;
+    width:100%;
+}
+
+.left-content .left-content-toggle{
+    position: absolute;
+    top: 5%;
+    right: -10px;
+    cursor: pointer;
+}
+aside.left-content > *{
+    margin-left: -60px;
+}
+.main-nav{
+    padding:0;
+    width: 60px;
+    position: relative;
+}
+.main-nav > li{
+    list-style: none;
+    display: block;
+    width: 60px;
+    text-align: center;
+
+}
+.main-nav .sub-nav{
+    position: absolute;
+    left: 60px;
+    top:0;
+    width: 170px;
+    padding:10px;
+    display: none;
+}
+.main-nav li{
+    list-style: none;
+}
+.main-nav li a{
+    text-decoration: none;
+}
+.sub-nav > li > a{
+    color:#35404d;
+    font-size: 12px;
+    font-weight: bold;
+    position: relative;
+}
+.sub-nav > li > a span{
+    position: absolute;
+    top: 2px;
+    right: -13px;
+}
+.sub-nav ul{
+
+    display: none;
+    overflow: hidden;
+}
+.sub-nav > li{
+    text-align: left;
+    padding-bottom: 10px;
+    cursor: pointer;
+}
+
+.sub-nav ul li{
+    margin: 10px 0;
+}
+.sub-nav ul li:last-child{
+    margin-bottom: 0;
+}
+.sub-nav ul li a{
+    font-size: 11px;
+    color:#35404d;
+    line-height:30px;
+}
+.main-nav > li > a
+{
+    background: none;
+    color:#9bd4f4;
+    font-size: 11px;
+    display: block;
+    padding:10px 5px;
+}
+.main-nav > li > a >i{
+    display: block;
+    margin-bottom: 5px;
+}
+.main-nav > li > a:hover,
+.main-nav > li.active,
+.main-nav:hover > li.active:hover > a,
+.main-nav:hover > li.active:hover{
+    color:#004071;
+    background: #febe10;
+    width: 60px;
+    background-image: url("css/img/active.png");
+    background-position: right;
+    background-repeat: no-repeat;
+    text-decoration: none;
+
+}
+
+.main-nav:hover > li.active{
+    background: none;
+}
+.main-nav:hover > li.active > a{
+    color:#9bd4f4;
+}
+
+.main-nav > li.active > a,
+.main-nav:hover > li.active:hover > a{
+    color:#fff;
+}
+.main-nav > li.active .sub-nav{
+    display: block;
+}
+.main-nav > li > span{
+    display: block;
+}
+.logo > div{
+    height: 70px;
+    text-align: center;
+    vertical-align: middle;
+    display: inline-block;
+}
+.logo > div.pear{
+    width: 60px;
+    background: #3f454f;
+    padding-top: 15px;
+}
+.logo > div.donggi img{
+    height: 100%;
+}
+
+.main-nav {
+    padding: 0;
+    width: 60px;
+    position: relative;
+    text-align:center;
+}
+
+
+.main-nav>li>a:hover, .main-nav>li.active, .main-nav:hover>li.active:hover>a, .main-nav:hover>li.active:hover {
+    color: #004071;
+    background: #febe10;
+    width: 60px;
+    background-image: url("img/active.png");
+    background-position: right;
+    background-repeat: no-repeat;
+    text-decoration: none;
+}
+
+.main-nav>li>a {
+    background: none;
+    color: #9bd4f4;
+    font-size: 11px;
+    display: block;
+    padding: 10px 5px;
+}
+
+
+.main-nav>li.active .sub-nav {
+    display: block;
+}
+
+.sub-nav>li>a {
+    color: #35404d;
+    font-size: 11px;
+    font-weight: bold;
+    position: relative;
+    width:140px;
+    float:left;
+    padding-top:20px;
+}
+
+.main-nav>li>a>i {
+    display: block;
+    margin-bottom: 5px;
+}
+
+.main-nav>li.active>a, .main-nav:hover>li.active:hover>a {
+    color: #fff;
+}
+
+.main-nav .sub-nav {
+    position: absolute;
+    left: 60px;
+    top: 0;
+    width: 170px;
+    padding:8px;
+    display:none;
+
+}
+
+.sub-nav>li {
+    text-align: left;
+    padding-bottom: 10px;
+    cursor: pointer;
+}
+
+.sub-nav>li>a span {
+    position: absolute;
+    top: 2px;
+    right: -13px;
+    padding-top:20px;
+}
+
 .wrapper {
   min-height: 100%;
     float:left;
@@ -75,8 +333,6 @@ body > .header {
   right: 0;
   z-index: 1030;
 }
-
-.logo img{width:100%;z-index:9; position: relative;}
 
 /* Define 2 column template */
 .right-side,
@@ -929,7 +1185,7 @@ color:#004071;}
     text-align: center;
     background-color: white;
     padding-top:20px;
-    margin-right:30px;
+    width:100%;
     margin-top:15px;
 }
 
@@ -939,7 +1195,7 @@ color:#004071;}
 padding:20px;
 background-color: white;
 float:left;
-
+margin:auto;
     z-index: 0;
     position: relative;
 }
@@ -950,8 +1206,8 @@ float:left;
     width: 86%;
     margin: auto;
 }
-.graphic_title{font-size:24px; font-weight:bold;color:#35404d;}
-.graphic_subtitle{font-size:18px; font-weight:normal;color:#35404d;}
+.graphic_title{font-size:21px; font-weight:bold;color:#35404d;}
+.graphic_subtitle{font-size:16px; font-weight:normal;color:#35404d;}
 
 .btn-graphic-more
 {
@@ -1106,27 +1362,28 @@ aside.left-side.sidebar-offcanvas{height: 100%;}
     /*background-repeat: no-repeat;*/
 /*}*/
 
-.sublevel a
+.sublevel li a
 {  vertical-align: middle;
     font-weight:normal;
-
-    width:185px;
 
     color:#717173!important;
 
 }
 
-.sublevel a:hover
-{background-image: url("img/pointer.png");
-    background-repeat: no-repeat;
-    float:right;
-    background-position:right;
+.sublevel a:hover{
+/*{background-image: url("img/pointer.png");*/
+    /*background-repeat: no-repeat;*/
+    /*float:right;*/
+    /*background-position:right;*/
     color:#004071!important;
     width:100%;
     height:auto;
-
+line-height:30px;
 }
 
+
+.sub-nav>li>a:hover { color:#004071!important;
+}
 
 .sublevel{padding:10px;width:150px;border-bottom:solid 1px #333;}
 
@@ -4472,3 +4729,12 @@ text-align: left;
     text-align:left;
 
 }
+
+#ModalFatality
+{max-height:700px;
+overflow:auto;}
+
+#ModalCargo
+{max-height:700px;
+    overflow:auto;}
+
