--- a/css/style2.css
+++ b/css/style2.css
@@ -32,10 +32,19 @@ a:focus {
 
 
 .btn-darkblue
+ {
+     background-color: #004071;
+     color:white;
+     padding:4px;
+
+ }
+
+.btn-large
 {
-    background-color: #004071;
-    color:white;
-    padding:4px;
+    width:30%;
+    padding:20px!important;
+    margin-top:20px;
+    margin:20px;
 
 }
 
@@ -53,6 +62,20 @@ a:hover.btn-lightblue{background-color:#febe10;color:white;}
 /* Layouts */
 
 
+.centering
+{  width:100%;
+    margin:auto;
+    text-align: center;
+}
+
+.margin
+{
+    margin:20px 0;
+}
+
+.border
+{padding-bottom:35px;
+border-bottom:solid 1px #ccc;}
 
 
 aside.left-content {
@@ -225,16 +248,12 @@ aside.left-content > *{
 .main-nav > li > span{
     display: block;
 }
-.logo > div{
-    height: 70px;
-    text-align: center;
-    vertical-align: middle;
-    display: inline-block;
-}
+
 .logo > div.pear{
     width: 60px;
     background: #3f454f;
     padding-top: 15px;
+    float:left;
 }
 .logo > div.donggi img{
     height: 100%;
@@ -450,9 +469,7 @@ img {
 .pad {
   padding: 20px 10px 10px;
 }
-.margin {
-  margin: 10px;
-}
+
 .pad-20 {
   padding: 20px;
 }
@@ -1132,6 +1149,7 @@ td.text-button a:hover{color:#004071;}
 
 
 .form-inline .form-group{margin-right:10px;}
+.form-templateeditor{margin:5px 40px 20px 25px;padding-right:30px; border-right:solid 1px #3f454f; margin-left:15px;float:left;}
 
 .trafficlight, .title, .description_year{float:left;}
 .trafficlight
@@ -1140,8 +1158,7 @@ td.text-button a:hover{color:#004071;}
     height:20px;
     margin:6px;
     }
-
-
+.css{font-family: "Helvetica Neue", Arial, sans-serif;}
 
 .trafficlight.red{background-color:red;}
 .trafficlight.yellow{background-color:yellow;}
@@ -1244,10 +1261,40 @@ font-weight:bold;
 color:#004071;
 margin-top:5px;}
 
-label{color:#3f454f; font-weight: normal;padding-right:10px;}
+label{color:#3f454f; font-weight: normal;padding-right:10px;width:200px;}
 option{text-align:left;}
 
 p{font-size:12px;}
+h2{margin-top:0;margin-bottom:20px;}
+
+.whitebox
+{   float:left;
+    background-color: white;
+    padding:20px;
+    width:48%;
+    margin:15px 20px 20px 0;
+}
+
+.whitebox-full
+{   float:left;
+    background-color: white;
+    padding:20px;
+    width:97.5%;
+    margin:15px 20px 20px 0;
+}
+
+
+.form-control{width:300px;}
+
+.form-periode
+{margin-left:204px;}
+
+.form-list
+{width:100%;padding-bottom:20px;}
+
+.form-padding{
+    margin-left:204px;
+}
 
 /*
     Component: Sidebar
