--- a/css/style2.css
+++ b/css/style2.css
@@ -31,6 +31,8 @@ a:focus {
 }
 
 
+hr{border-top: 1px solid #ccc;}
+
 .btn-darkblue
  {
      background-color: #004071;
@@ -42,9 +44,9 @@ a:focus {
 .btn-large
 {
     width:30%;
-    padding:20px!important;
+    padding:15px!important;
     margin-top:20px;
-    margin:20px;
+    margin:10px;
 
 }
 
@@ -70,8 +72,8 @@ a:hover.btn-lightblue{background-color:#febe10;color:white;}
 
 .margin
 {
-    margin:20px 0;
-}
+    margin-top:20px;
+margin-bottom:50px;}
 
 .border
 {padding-bottom:35px;
@@ -344,6 +346,13 @@ aside.left-content > *{
 .wrapper:after {
   clear: both;
 }
+
+.stack
+{
+    width:80%;
+    margin-left:17%;
+}
+
 /* Header */
 body > .header {
   position: absolute;
