--- a/css/style2.css
+++ b/css/style2.css
@@ -1160,10 +1160,12 @@ td.text-button a:hover{color:#004071;}
 .form-inline .form-group{margin-right:10px;}
 .form-templateeditor{margin:5px 40px 20px 25px;padding-right:30px; border-right:solid 1px #3f454f; margin-left:15px;float:left;}
 
+.input-group .form-control{width:25%;margin-left:4px;}
+
 .trafficlight, .title, .description_year{float:left;}
 .trafficlight
 {
-    width:10px;
+    width:10px;f
     height:20px;
     margin:6px;
     }
@@ -1178,6 +1180,12 @@ td.text-button a:hover{color:#004071;}
 {font-size:22px;
     font-weight:bold;
 color:#004071;}
+
+.title_artifact{
+font-size: 22px;
+font-weight: bold;
+color: #004071;
+}
 
 .description_year{
     font-size:16px;
@@ -1199,10 +1207,20 @@ color:#004071;}
 }
 
 .form-control {
-    background-color: #ebebeb;
+    background-color: #FAFAFA;
     border-radius: 0px;
     padding: 0px 5px;
     height:24px;
+
+}
+
+.form-control2 {
+    background-color: #FAFAFA;
+    border-radius: 0px;
+    padding: 0px 5px;
+    height:24px;
+    border:1px solid #eee;
+    margin-bottom:21px;
 
 }
 
@@ -1274,7 +1292,7 @@ label{color:#3f454f; font-weight: normal;padding-right:10px;width:200px;}
 option{text-align:left;}
 
 p{font-size:12px;}
-h2{margin-top:0;margin-bottom:20px;}
+h2{margin-top:0;margin-bottom:20px;float:left;}
 
 .whitebox
 {   float:left;
