--- a/css/style2.css
+++ b/css/style2.css
@@ -16,6 +16,7 @@ body {
     background: #f0f3f4;
 }
 
+.row-full{margin:0; padding:0;display:table;}
 
 section{display:block;}
 
@@ -30,6 +31,12 @@ a:focus {
   color: #72afd2;
 }
 
+a .fa {margin-right:5px;}
+
+.text-grey
+{color:#777;float:left;line-height: 30px; margin-right:20px;}
+
+.text-med{font-size:16px;}
 
 hr{border-top: 1px solid #ccc;}
 
@@ -453,8 +460,16 @@ h6,
 .h5,
 .h6 {
   /*font-family: 'Source Sans Pro', sans-serif;*/
-  font-family: 'Lato', sans-serif;
+  font-family: sans-serif;
 }
+h5{font-size: 28px;}
+h4, h3{float:left;margin-top:0px;margin-right:20px;}
+
+h6{  color: #3f454f;
+    font-size:16px;
+line-height: 30px;
+float:left;}
+
 /* Page Header */
 .page-header {
   margin: 10px 0 20px 0;
@@ -1153,7 +1168,7 @@ a:hover.text-button{color:#004071;}
 
 
 
-td.text-button a{font-family:"Helvetica Neue", Arial, sans-serif; color:#717173;text-decoration: underline;float:left;margin-right:20px;font-weight: bold;}
+td.text-button a{font-family:"Helvetica Neue", Arial, sans-serif; color:#72afd2;text-decoration: underline;float:left;margin-right:20px;font-weight: bold;}
 td.text-button a:hover{color:#004071;}
 
 
@@ -1162,10 +1177,16 @@ td.text-button a:hover{color:#004071;}
 
 .input-group .form-control{width:25%;margin-left:4px;}
 
+.tablekpitarget{text-align: center;}
+.tablekpitarget .form-control {width:90%;}
+.tablekpitarget .form-control-small{width:50px;margin-left:4px; background-color: #FAFAFA;border: 1px solid #ccc;}
+.tablekpitarget thead {background: none;color:#3f454f;font-weight: bold;}
+.tablekpitarget thead th{color:#3f454f;font-weight: bold;}
+
 .trafficlight, .title, .description_year{float:left;}
 .trafficlight
 {
-    width:10px;f
+    width:10px;
     height:20px;
     margin:6px;
     }
@@ -1321,6 +1342,11 @@ h2{margin-top:0;margin-bottom:20px;float:left;}
 
 .form-padding{
     margin-left:204px;
+}
+
+.heading
+{
+    width:180px;float:left;
 }
 
 /*
