--- a/css/style2.css
+++ b/css/style2.css
@@ -41,6 +41,24 @@ a .fa {margin-right:5px;}
 
 hr{border-top: 1px solid #ccc;}
 
+.labletop {width:auto!important;}
+
+.blue-box
+{
+
+   margin:20px;
+    width:30%;
+    float:left;
+    height:150px;
+    background-color: white;
+    padding:14px;
+
+}
+.closeblue
+{opacity:1;color:#004071;  text-shadow: 0 1px 0 black;}
+
+.padding-top{padding-top:9%;}
+
 .btn-darkblue
  {
      background-color: #004071;
