--- a/css/style2.css
+++ b/css/style2.css
@@ -1181,14 +1181,13 @@ margin-bottom:15px;}
     border-width: 0 5px 5px;
 }
 
-button.tooltip_description2
-{float:left;
-    background-color: white;
-    padding:15px;
-    width:23%;
-    margin-right:20px;
-    margin-bottom:20px;
-    border:none;
+button.tooltip_description
+{border:none;
+    background: none;
+    margin-left:15px;float: right;width:40%;
+    text-align:right;
+    margin-right:20px;}
+
 }
 
 
